2006-11-19 arne

	* more doxygen documentation
	* fixed a CDataBrowser draw issue
	* changed most of the control constructors to use const CPoint instead of CPoint
	* changed drag/drop implementation on Mac OS X to use the Pasteboard Manager (if building for 10.3 or above)

2006-11-02 arne

	* Implemented Offscreen stuff on Mac OS X without the need of quickdraw (and fix Offscreen drawing on mac with and without quickdraw)
	* In CTextEdit::looseFocus changed order of loose focus message handling and valueChanged notification so that you can call takeFocus in valueChanged or destroy the textedit control in there.
	* Fixed memory leak and possible crash in CTextEdit if someone tries to call takeFocus on the textedit while inside valueChanged of the listener.

2006-09-15 arne

	* Removed Mac OS 9 code and Quickdraw code (also the QUARTZ & MACX macro definition, only MAC is left)
	* add tab index variable to CTabView
	* AEffGUIEditor updated for VST 2.4
	* Windows 64bit CFileSelector changes
	* fix: don't propagate mouse move message with button state to views other than the mouse down view if there is one

2006-06-25 arne

	* fix a crash bug in GDI+ bitmap loader, when the bitmap does not exist

2006-06-23 arne

	* add new view : CDataBrowser

2006-06-02 arne

	* add method to CScrollView to show a specific rect

2006-05-10 arne

	* quartz: moved CBitmap completly to Image I/O in Mac OS X >= 10.4. The downside is, that you can only set the transparent color once.
	* CBitmap::setTransparentColor needs to be called explicilty now. The default behaviour is now that there's no transparent color initially.
	* removed BEOS code
	* when changeing the size of the container in CScrollView another parameter controls if the visible area should stay the same.
	* new working implementation of CSplashScreen

2006-04-28 arne

	* more bugfixes for CScrollView
	* quartz: some changes to line and rect drawing (offset the transformation matrix by 0.5,0.5 for better visibility)